--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="bottom-left"></div>
       <div class="top-left"></div>
-      <div class="top-right"><a href="Home.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
+      <div class="top-right"><a href="index.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
       <div class="bottom-right"></div>
       <div class="home-section">
        </div>
@@ -52,7 +52,7 @@
     </div>
   
     <p>Email Us At: <a href="mailto:katiewritescode@isp.com">katiewritescode@isp.com</p></a>
-    <p style="font-size: small; text-align: center"><a href="Home.html">Back to home</a></p>
+    <p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
 </body>
 </html>
 
