--- a/Cart.html
+++ b/Cart.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="bottom-left"></div>
       <div class="top-left"></div>
-      <div class="top-right"><a href="Home.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
+      <div class="top-right"><a href="index.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
       <div class="bottom-right"></div>
       <div class="home-section">
 
@@ -43,10 +43,8 @@
 
 
 
-<p style="font-size: small; text-align: center"><a href="Home.html">Back to home</a></p>
+<p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
 </body>
 </html>
  
  
- 
-
