--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="bottom-left"></div>
       <div class="top-left"></div>
-      <div class="top-right"><a href="Home.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
+      <div class="top-right"><a href="index.html">Home | </a><a href="Books.html"> Books |</a><a href="Cart.html"> Cart |</a><a href="AboutUs.html"> About Us | </a></div>
       <div class="bottom-right"></div>
       <div class="home-section">
 
