--- a/Books.html
+++ b/Books.html
@@ -41,16 +41,31 @@
 <th>Price</th>
 </tr>
 <tr>
-<td>Book 1</td>
-<td>$0.00</td>
+<td><p></p>
+        Title 1
+        <h5>summary</h5>
+</td>
+<td>$0.00
+        <p><button class="button">Purchase</button></p>
+</td>
 </tr>
 <tr>
-<td>Book 2</td>
-<td>$0.00</td>
+<td><p></p>
+        Title 2
+        <h5>summary</h5>
+</td>
+<td>$0.00
+        <p><button class="button">Purchase</button></p>
+</td>
 </tr>
 <tr>
-<td>Book 3</td>
-<td>$0.00</td>
+<td><p></p>
+        Title 3
+        <h5>summary</h5>
+</td>
+<td>$0.00
+        <p><button class="button">Purchase</button></p>
+</td>
 </tr>
 </table>
 <p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
