--- a/Books.html
+++ b/Books.html
@@ -42,33 +42,48 @@
 </tr>
 <tr>
 <td><p></p>
-        Title 1
-        <h5>summary</h5>
+        <h3><i>The Praxle Paradox</i></h3>
+        <img src="book1.png" style="width:30%">
+        <h5>"This Dr. Wort Lest novel is a reflection on the <br>thought process of the average person being applied to the<br>greater idea of universal concepts. </h5>
 </td>
-<td>$0.00
+<td>$15.49
+        <p><button class="button">Purchase</button></p>
+</td>
+</tr>
+<tr>
+        <td width="600"><p></p>
+        <h3><i>The Haunted Hills</i></h3>
+        <img src="book4.png" style="width:30%">
+        <h5>This chilling story begins in the small town of Belton, Missouri, <br>where two young children looking for adventure wander <br>
+                too far from home.</h5>
+</td>
+<td>$17.00
         <p><button class="button">Purchase</button></p>
 </td>
 </tr>
 <tr>
 <td><p></p>
-        Title 2
-        <h5>summary</h5>
+        <h3><i>Where The Stars Don't Shine</i></h3>
+        <img src="book2.png" style="width:30%">
+        <h5>A thrilling romance novel where a young couple, despite<br>their differences, can't stop coming back to each other. They <br> have a grip on each other that neither understands...</h5>
 </td>
-<td>$0.00
+<td>$20.00
         <p><button class="button">Purchase</button></p>
 </td>
 </tr>
 <tr>
-<td><p></p>
-        Title 3
-        <h5>summary</h5>
-</td>
-<td>$0.00
-        <p><button class="button">Purchase</button></p>
-</td>
-</tr>
+        <td><p></p>
+                <h3><i>Lightning Fast</i></h3>
+                <img src="book3.png" style="width:30%">
+                <h5>This inspiring biography follows track star Alfredo Drew through<br>his difficult yet eventually successful life from an aspiring track star<br>to a two-time gold metalist in the Olympic</h5>
+        </td>
+        <td>$25.00
+                <p><button class="button">Purchase</button></p>
+        </td>
+        </tr>
 </table>
 <p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
 </body>
 </html>
+ 
  
