--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,8 @@
 
 <div class="about-section">
     <h1>About Us</h1>
-    <p>The Belton Technology Student Association</p>
+    <p>Our mission is to provide readers an easy process for purchasing and receiving books.</p>
+    <p>Due to the pandemic, there has been a major shift in how the majority of people do their shopping.<br> We're here to allow readers to view, purchase, and receive some of our favorite books!</p>
   </div>
   
   <h2 style="text-align:center">Our Advisors</h2>
@@ -31,7 +32,7 @@
         <div class="container">
           <h2>Kara Kestner</h2>
           <p class="title">Business/Computer Science Teacher, FBLA Sponsor, and TSA Assistant Sponsor</p>
-          <p>Kara Kestner teaches many classes at Belton High School such as Computer Science Essentials, Computer Science Applications, Cybersecurity, and Personal Finance.</p>
+          <p>Kara Kestner teaches many classes at Belton High School such as Computer Science Essentials, Computer Science Applications, Cybersecurity, and Personal Finance.Despite only having been a sponsor of TSA for 2 years, she has very easily caught on and become a highly reliable leader.</p>
           <p>kkestner@bsd124.org</p>
           <p><button class="button">Contact</button></p>
         </div>
@@ -45,13 +46,14 @@
           <h2>Nick Civitello</h2>
           <p class="title">Engineering Teacher, Robotics Sponsor, and TSA Sponsor</p>
           <p>Nick Civitello teaches all of the engineering classes at Belton High School, including Computer Integrated Manufacturing, Principles of Engineering, and Engineering Design & Development. He is both our robotics and TSA sponsor, and he is respected dearly by his students for his engineering knowledge and leadership experience. </p>
-          <p>mike@example.com</p>
+          <p>ncivitello@bsd124.org</p>
+          &nbsp
           <p><button class="button">Contact</button></p>
         </div>
       </div>
     </div>
   
-    <p>Email Us At: <a href="mailto:katiewritescode@isp.com">katiewritescode@isp.com</p></a>
+    <p>Email Us At: <a href="mailto:katiewritescode@gmail.com">katiewritescode@gmail.com</p></a>
     <p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
 </body>
 </html>
