--- a/Books.html
+++ b/Books.html
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-
-
-
+<script src="store.js" async></script>
 <meta charset="utf-8" />
 <title>Webmaster Books</title>
 <link rel="stylesheet" type="text/css" href="style.css" />
@@ -47,7 +45,7 @@
         <h5>"This Dr. Wort Lest novel is a reflection on the <br>thought process of the average person being applied to the<br>greater idea of universal concepts. </h5>
 </td>
 <td>$15.49
-        <p><button class="button">Purchase</button></p>
+        <p><button class="button"><a href="cart.html">Purchase</button></p></a>
 </td>
 </tr>
 <tr>
@@ -58,7 +56,7 @@
                 too far from home.</h5>
 </td>
 <td>$17.00
-        <p><button class="button">Purchase</button></p>
+        <p><button class="button"><a href="cart.html">Purchase</button></p></a>
 </td>
 </tr>
 <tr>
@@ -68,22 +66,32 @@
         <h5>A thrilling romance novel where a young couple, despite<br>their differences, can't stop coming back to each other. They <br> have a grip on each other that neither understands...</h5>
 </td>
 <td>$20.00
-        <p><button class="button">Purchase</button></p>
+        <p><button class="button"><a href="cart.html">Purchase</button></p></a>
 </td>
 </tr>
 <tr>
         <td><p></p>
                 <h3><i>Lightning Fast</i></h3>
                 <img src="book3.png" style="width:30%">
-                <h5>This inspiring biography follows track star Alfredo Drew through<br>his difficult yet eventually successful life from an aspiring track star<br>to a two-time gold metalist in the Olympic</h5>
+                <h5>This inspiring biography follows track star Alfredo Drew through<br>his difficult yet eventually successful life from an aspiring track star<br>to a two-time gold medalist in the Olympics.</h5>
         </td>
         <td>$25.00
-                <p><button class="button">Purchase</button></p>
+                <p><button class="button"><a href="cart.html">Purchase</button></p></a>
         </td>
         </tr>
 </table>
+
+
+
+
+
+
+
+
 <p style="font-size: small; text-align: center"><a href="index.html">Back to home</a></p>
 </body>
 </html>
  
  
+ 
+
